<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="end"
        android:text="@string/result"
        android:textSize="40sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gridLayout"
        android:padding="16dp" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:columnCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewResult">


        <Button
            android:id="@+id/buttonC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
        android:backgroundTint="@color/button_background_color"
        android:text="@string/C"
        android:textSize="26sp" />

        <Button
            android:id="@+id/buttonPlusMinus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/button_background_color"
            android:text="@string/neg_button"
            android:textSize="26sp" />

        <Button
            android:id="@+id/buttonPercent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/button_background_color"
            android:text="@string/procentage_button"
            android:textSize="26sp" />

        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/button_background_color"
            android:text="@string/division_button"
            android:textSize="26sp" />


        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/button_background_color"
            android:text="@string/dig_7"
            android:textSize="26sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/button_background_color"
            android:text="@string/dig_8"
            android:textSize="26sp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/button_background_color"
            android:text="@string/dig_9"
            android:textSize="26sp" />

        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/button_background_color"
            android:text="@string/multiplication_button"
            android:textSize="26sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/button_background_color"
            android:text="@string/dig_4"
            android:textSize="26sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/button_background_color"
            android:text="@string/dig_5"
            android:textSize="26sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/button_background_color"
            android:text="@string/dig_6"
            android:textSize="26sp" />

        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/button_background_color"
            android:text="@string/minus_button"
            android:textSize="26sp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/button_background_color"
            android:text="@string/dig_1"
            android:textSize="26sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/button_background_color"
            android:text="@string/dig_2"
            android:textSize="26sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/button_background_color"
            android:text="@string/dig_3_butt"
            android:textSize="26sp" />

        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/button_background_color"
            android:text="@string/plus_button"
            android:textSize="26sp" />

        <Button
            android:id="@+id/buttonDot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/button_background_color"
            android:text="@string/dot_button"
            android:textSize="26sp" />
        <Button
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/button_background_color"
            android:text="@string/dig_0"
            android:textSize="26sp" />


        <Button
            android:id="@+id/buttonEqual"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/button_background_color"
            android:text="@string/equal_button"
            android:textSize="26sp" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/button_background_color"
            android:text="@string/delete_button"
            android:textSize="26sp" />

        <Button
            android:id="@+id/buttonSquareRoot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/button_background_color"
            android:text="@string/square_root"
            android:textSize="26sp" />

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
